Updating base path

--- a/webpages/_config.yml
+++ b/webpages/_config.yml
@@ -22,7 +22,7 @@ title: Tushar - MyBlogs
 email: kinstushar@gmail.com
 description: >- 
   Representing my work through words 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/blogs/webpages/"
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
